--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Public Holidays</title>
+    <link rel="stylesheet" href="public/style.css" />
 </head>
 <body>
     <h1>Learn Worldwide All Public Holidays </h1>
     <div id="container">
-        
+        <div id="holidays" >
+
+        </div>
     </div>
 
     <script src="src/data.js">
