added type into script tag

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       </div>
     </div>
 
-    <script src="src/app.js"></script>
+    <script src="src/app.js" type="module"></script>
     <script src="src/utils/openTabs.js"></script>
   </body>
 </html>
